--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<script src="./lib/angular-translate-loader-static-files.min.js"></script>
 		<script src="./lib/jsZip/jszip.min.js"></script>
 		<script src="./lib/XMLWriter-1.0.0.js"></script>
-		<script src="https://rawgithub.com/gsklee/ngStorage/master/ngStorage.js"></script>
+		<script src="./lib/ngStorage.js"></script>
 		<script src="./lib/bootstrap/js/bootstrap.js"></script>
 		<script src="./script/app.js"></script>
 		<script src="./script/service/zipFile.js"></script>
