Ajout "need" dans "software"

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<script src="./script/model/DataContainer.js"></script>
 		<script src="./script/model/Categories.js"></script>
 		<script src="./script/model/Category.js"></script>
+		<script src="./script/model/Need.js"></script>
 		<script src="./script/model/Software.js"></script>
 
 		
