--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 		<script src="./script/model/DataContainer.js"></script>
 		<script src="./script/model/Categories.js"></script>
 		<script src="./script/model/Category.js"></script>
+		<script src="./script/model/Dependency.js"></script>
+		<script src="./script/model/Features.js"></script>
+		<script src="./script/model/Feature.js"></script>
 		<script src="./script/model/Need.js"></script>
 		<script src="./script/model/Software.js"></script>
 
